force-app/main/default/objects/FEC_API_Settings__mdt/FEC_API_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata Type for FEC API configuration settings. Stores API key, base URL, and operational parameters.</description>
    <label>FEC API Settings</label>
    <pluralLabel>FEC API Settings</pluralLabel>
</CustomObject>