force-app/main/default/objects/FEC_API_Settings__mdt/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>FEC OpenFEC API key. Store this value securely.</description>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>