force-app/main/default/objects/FEC_API_Settings__mdt/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <description>Base URL for the FEC OpenFEC API.</description>
    <label>Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>