force-app/main/default/objects/FEC_API_Settings__mdt/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <description>Number of records to request per FEC API page. Default: 100.</description>
    <label>Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>