force-app/main/default/objects/FEC_API_Settings__mdt/fields/Request_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Request_Timeout__c</fullName>
    <description>HTTP request timeout in milliseconds. Default: 120000.</description>
    <label>Request Timeout</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>